--- a/styleIndex.css
+++ b/styleIndex.css
@@ -15,14 +15,14 @@ body {
 
 .active-list-item {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     list-style-type: none;
     background-color: aqua;
-    padding: 30px;
+    width: 100%;
     border-radius: 10px;
     border: 2px solid black;
-    margin: 10px;
+    
 }
 
 #display-area {
@@ -36,7 +36,21 @@ body {
     margin: auto;
 }
 
-.active-list-item > button {
+.active-list-item > #dlt-btn {
     grid-row: 1 / 2;
-    grid-column: 3 / 4;
+    grid-column: 3 / 5;
+    margin: 5px;
+}
+
+.active-list-item > h3 {
+    grid-row: 2 / 2;
+    grid-column: 1 / 5;
+}
+
+#list {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    background-color: black;
+    flex-direction: column;
 }
