--- a/styleIndex.css
+++ b/styleIndex.css
@@ -17,7 +17,7 @@ body {
 .active-list-item {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 40px;
-    grid-template-rows: .5fr. .5fr;
+    grid-template-rows: .5fr .5fr;
     list-style-type: none;
     background-color: aqua;
     border-radius: 10px;
